package com.cms.assignment.complaint;

public class Complaint {
}
