package com.cms.assignment.supportperson;

public class SupportPerson {
}
