package com.cms.assignment.systemadministrator;

public class SystemAdministrator {
}
